# factchecking-embeddings

./: .gitignore  README.md
factcheck-embeddings/: .gitignore  README.md  pyproject.toml
factcheck-embeddings/configs/: baseline_gemma.yaml  baseline_gemma_test.yaml  cpu_train.yaml  data_build.yaml  global_data_build.yaml  global_inference.yaml  inference.yaml  test_data_build.yaml  test_inference.yaml
factcheck-embeddings/scripts/: compare_results.py  run_all_cpu.sh  run_baseline.sh  run_build.sh  run_encode.sh  run_eval.sh  run_global.sh  run_retrieve.sh  run_test.sh  run_train_cpu.sh
factcheck-embeddings/src/factcheck_relevance/: baseline_encode.py  build_data.py  build_global.py  encode.py  eval.py  retrieve.py  train.py  utils.py
factcheck-embeddings/src/factcheck_tevatron_relevance.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
factcheck-embeddings/tests/: test_data_build.py
